test/library/standard/Sort/errors/sortDomainArray.assoc2.good
sortDomainArray.chpl:50: error: isSorted() is not supported on domains
